<resources>
    <string name="app_name">Suitmedia Test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="selectedUser">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="second_screen">Second Screen</string>
    <string name="second_screen_action_bar">Second Screen</string>
    <string name="third_screen_action_bar">Third Screen</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email@email.com</string>
    <string name="try_again">Try Again</string>
</resources>