<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.firstscreen.MainActivity">

    <ImageView
        android:id="@+id/ic_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_photo"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.submission.suitmediatest.ui.firstscreen.EditText
        android:id="@+id/input_name"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="70dp"
        android:hint="@string/name"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ic_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.submission.suitmediatest.ui.firstscreen.EditText
        android:id="@+id/input_word"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:hint="@string/palindrome"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/btn_check"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:text="@string/check"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/button_shape"
        app:layout_constraintTop_toBottomOf="@id/input_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_medium"
        android:background="@drawable/button_shape"
        app:layout_constraintTop_toBottomOf="@id/btn_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>